--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,22 @@ body {
 
 #text {
   background-color: #0a0a23;
-  color: #fff;
+  color: #ffffff;
   padding: 10px;
+}
+
+#game {
+  max-width: 500px;
+  max-height: 400px;
+  background-color: #ffffff;
+  color: #ffffff;
+  margin: 30px auto 0px;
+  padding: 10px;
+}
+
+#controls,
+#stats {
+  border: 1px solid #0a0a23;
+  padding: 5px;
+  color: #0a0a23;
 }
