--- a/styles.css
+++ b/styles.css
@@ -1,94 +1,103 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
-  --light-grey: #f5f6f7;
-  --dark-blue: #0a0a23;
-  --fcc-blue: #1b1b32;
-  --light-yellow: #fecc4c;
-  --dark-yellow: #feac32;
-  --light-pink: #ffadad;
-  --dark-red: #850000;
-  --light-green: #acd157;
+  --dark-grey: #0a0a23;
+  --white: #ffffff;
+  --yellow: #f1be32;
 }
 
 body {
-  font-family: "Lato", Helvetica, Arial, sans-serif;
-  font-size: 18px;
-  background-color: var(--fcc-blue);
-  color: var(--light-grey);
+  color: var(--white);
+  background-color: var(--dark-grey);
 }
 
-h1 {
-  text-align: center;
-}
-
-.container {
-  width: 90%;
-  max-width: 680px;
-}
-
-h1,
-.container,
-.output {
-  margin: 20px auto;
-}
-
-label,
-legend {
-  font-weight: bold;
-}
-
-.input-container {
+.title-container {
+  margin: 10px 0;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
 }
 
-button {
-  outline: none;
+.title {
+  font-size: 2.5rem;
+}
+
+.date-svg {
+  width: 30px;
+  height: 30px;
+}
+
+.divider {
+  margin: auto;
+  width: 150px;
+  height: 10px;
+  background-color: var(--yellow);
+}
+
+.dropdown-container {
+  width: 50%;
+  margin: 40px auto;
+  position: relative;
+}
+
+select {
+  display: block;
+  margin: 20px auto 0;
+  width: 100%;
+  height: 50px;
+  font-size: 100%;
+  font-weight: bold;
   cursor: pointer;
-  text-decoration: none;
-  background-color: var(--light-yellow);
-  border: 2px solid var(--dark-yellow);
-}
-
-.clear {
-  background-color: var(--light-pink);
-  color: var(--dark-red);
-  border-color: var(--dark-red);
-}
-
-button,
-input,
-select {
-  min-height: 24px;
-  color: var(--dark-blue);
-}
-
-fieldset,
-label,
-button,
-input,
-select {
-  margin-bottom: 10px;
-}
-
-.output {
-  border: 2px solid var(--light-grey);
+  background-color: var(--white);
+  border: none;
+  color: var(--dark-grey);
+  appearance: none;
   padding: 10px;
+  padding-right: 38px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  transition: color 0.3s ease, background-color 0.3s ease,
+    border-bottom-color 0.3s ease;
+}
+
+.select-icon {
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  width: 30px;
+  height: 36px;
+  pointer-events: none;
+  padding-left: 5px;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.select-icon svg.icon {
+  transition: fill 0.3s ease;
+  fill: var(--dark-grey);
+}
+
+#current-date {
+  font-size: 2rem;
   text-align: center;
 }
 
-.hide {
-  display: none;
-}
+@media (max-width: 375px) {
+  .title {
+    font-size: 2rem;
+  }
 
-.output span {
-  font-weight: bold;
-  font-size: 1.2em;
-}
+  .dropdown-container {
+    width: 80%;
+  }
 
-.surplus {
-  color: var(--light-green);
-}
-
-.deficit {
-  color: var(--light-pink);
+  .date-svg {
+    display: none;
+  }
 }
